Mod: Change cursor style while the mouse hover on it.

--- a/animation/slider/style/index.css
+++ b/animation/slider/style/index.css
@@ -17,6 +17,10 @@ body {
     overflow: hidden;
 }
 
+.slider:hover {
+    cursor: pointer;
+}
+
 .slider ul li {
     position: absolute;
     left: 100%;
