--- a/animation/slider/style/index.css
+++ b/animation/slider/style/index.css
@@ -21,11 +21,40 @@ body {
     cursor: pointer;
 }
 
-.slider ul li {
+.slider .slider-bg-ul li {
     position: absolute;
     left: 100%;
+    z-index: 1;
 }
 
-.slider ul li:first-child {
+.slider .slider-bg-ul li:first-child {
     left: 0;
+}
+
+.slider .slider-nav-ul {
+    margin: 0 auto;
+    position: absolute;
+    top: 140px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    z-index: 2;
+}
+
+.slider-nav-ul li {
+    float: left;
+    width: 8px;
+    height: 8px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: solid 1px white;
+    margin: 0 2px;
+}
+
+.slider-nav-ul li:hover {
+    background-color: white;
 }
