New: Add slider navigate dots highlight switch.

--- a/animation/slider/style/index.css
+++ b/animation/slider/style/index.css
@@ -55,6 +55,10 @@ body {
     margin: 0 2px;
 }
 
+.nav-highlight {
+    background-color: white;
+}
+
 .slider-nav-ul li:hover {
     background-color: white;
 }
