--- a/animation/slider/style/index.css
+++ b/animation/slider/style/index.css
@@ -6,14 +6,14 @@ body {
 
 .container {
     margin: 0 auto;
-    width: 400px;
-    height: 400px;
+    width: 1000px;
+    height: 450px;
 }
 
 .slider {
     position: relative;
-    width: 225px;
-    height: 165px;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -22,6 +22,9 @@ body {
 }
 
 .slider .slider-bg-ul li {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     position: absolute;
     left: 100%;
     z-index: 1;
@@ -34,7 +37,7 @@ body {
 .slider .slider-nav-dot-ul {
     margin: 0 auto;
     position: absolute;
-    top: 140px;
+    bottom: 10%;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
