Mod: Add 20px to left and right page navigation.

--- a/animation/slider/style/index.css
+++ b/animation/slider/style/index.css
@@ -85,11 +85,11 @@ body {
 }
 
 .slider-nav-page.left {
-    left: 0;
+    left: 20px;
 }
 
 .slider-nav-page.right {
-    right: 0;
+    right: 20px;
 }
 
 .slider-nav-page.left:before,
